[UI fix] filter box overlapping calendar bug fixed

--- a/Client/scss/apps/reporting/index.scss
+++ b/Client/scss/apps/reporting/index.scss
@@ -546,3 +546,9 @@ body {
 .PresetDateRangePicker_button {
 	margin: 5px;
 }
+
+.reporting-filterBox {
+	.dropdown {
+		z-index: 0;
+	}
+}
